# nonebot-plugin-chatgpt_web

./: .dockerignore  .env.prod  .gitignore  Dockerfile  Dockerfile_CN  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  start.sh
src/plugins/gpt-bot/: __init__.py  config.py  message_formatter.py
src/plugins/gpt_bot/: .config.py.kate-swp  __init__.py  config.py  message_formatter.py
