[project]
name = "gpt-bot"
version = "0.1.0"
description = "gpt-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    {name = "Telegram", module_name = "nonebot.adapters.telegram"}
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []
